# lark_cython

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_wheels.sh  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: tests-versions.yml  tests.yml
benchmarks/: benchmark_lark_parser.py
examples/: calc.py  json_parser.py
lark_cython/: __init__.py  lark_cython.pyx
tests/: test_basic.py
