[build-system]
requires = ["setuptools", "wheel", "Cython>=0.29.1,<0.29.35"]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
build = "*p36-* *p37-* *p38-* *p39-* *p310-* *p311-*"
build-frontend = "build"
build-verbosity = 1
test-requires = [ "pytest" ]
test-command = "pytest {project}"
